# bfx_skills

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: citations.yaml  global.yaml  global.yaml.template
config/tools/: bwa.yaml  fastp.yaml
envs/: bwa.yaml  fastp.yaml
scripts/: assess_data.py  watch_job.py
skills/: bfx-analyze.md  bfx-config.md  bfx-dag.md  bfx-monitor.md  bfx-run.md  cite-bfx.md  do-bfx.md  hypothesize-bfx.md  init-bfx.md  plan-bfx.md  prep-bfx.md
src/bfx_mcp/: server.py
src/bfx_mcp/cluster/: job_state.py  slurm.py
src/bfx_mcp/common/: config.py  detect.py  registry.py  shell.py
src/bfx_mcp/databases/: conventions.md  tools.py
src/bfx_mcp/environments/: guidelines.md  tools.py
src/bfx_mcp/validation/: output_validation.md  tools.py
templates/profiles/local/: config.yaml
templates/profiles/slurm/: config.yaml
templates/rules/decontam/: bwa_decontam.smk
templates/rules/qc/: fastp.smk
tests/: conftest.py  test_config.py  test_databases.py  test_detect.py  test_environments.py  test_registry.py  test_shell.py  test_slurm.py  test_validation.py
