[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bfx-mcp"
version = "0.1.0"
description = "Local MCP server for bioinformatics: cluster job placement, environment/database registries, and output-validation guidance."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pyyaml>=6.0",
]

[project.scripts]
bfx-mcp = "bfx_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bfx_mcp"]

[tool.hatch.build]
include = [
    "src/bfx_mcp/**/*.py",
    "src/bfx_mcp/**/*.md",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
